# streaming-ai

./: .env.example  .gitignore  README.md  agent.py  docker-compose.highlight.yml  docker-compose.moderator.yml  dockerfile.highlight  dockerfile.moderator  main.py  moderator_agent.py  requirements.txt  run_moderator.py
.github/workflows/: deploy-agent.yml
agents/: moderator.py
highlight/: docker-compose.yml  dockerfile  highlight_README.md  highlight_agent.py  pyproject.toml  requirements.txt
highlight/.avctl/: config.toml
models/: messaging.py
moderator/: docker-compose.yml  dockerfile  moderator_README.md  moderator_agent.py  pyproject.toml  requirements.txt
moderator/.avctl/: config.toml
services/: llm_clients.py
